[package]
name = "webauthn-rs-core"
version = "0.4.8"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2021"
description = "Webauthn Cryptographic Operation Handling"
repository = "https://github.com/kanidm/webauthn-rs"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
insecure-rs1 = []

default = []

[dependencies]
base64urlsafedata-icp = { version = "0.1.2"}
webauthn-rs-proto-icp = { version = "0.4.8"}
serde = { version = "1", features = ["derive"] }
serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
serde_json = "1.0"
nom = { version = "7.1", default-features = false}
base64 = "0.13"
thiserror = "1.0"
tracing = "0.1"
# openssl = { version = "0.10" }
# We could consider replacing this with openssl rand.
# rand = "0.7.3"
url = { version = "2", features = ["serde"] }
x509-parser = "0.13.0"
der-parser = "7.0.0"
# compact_jwt = "0.2.3"
# uuid = { version = "1", features = ["serde"] }
getrandom = { version = "0.2.3", features = ["custom"]}
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10.8"
hex = "0.4.3"
ic-cdk = "0.19.0-beta.3"

[dev-dependencies]
hex-literal = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
